# eq-non-classical

./: CHANGELOG.md  README.md  default.nix  eq-non-classical.cabal  eq_.cabal
app/: Main.hs
nix/: overrides.nix
src/: Eq.hs  Eq_.hs
