cabal-version:       2.0
name:                eq-non-classical
version:             0.0.0
synopsis:            non-classical `Eq` typeclass
description:         non-classical `Eq` typeclass
homepage:            https://github.com/chessai/eq-non-classical
bug-reports:         https://github.com/chessai/eq-non-classical/issues
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           2019 chessai
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/eq-non-classical.git

library
  hs-source-dirs:      src
  exposed-modules:     Eq
                       

  build-depends:       base >= 4.5 && < 4.13
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
